Fix header on smaller screens

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,7 +1,7 @@
 .header {
   display: flex;
-  flex-direction: column;
   align-items: center;
+  justify-content: center;
   padding: 8px 16px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.06);
   background-color: white;
@@ -12,8 +12,8 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-
-  width: 1200px;
+  flex-grow: 1;
+  max-width: 1200px;
 }
 
 .left {
